bluec-tests/tests/invalid/expr_alignof/alignof_expr3.c
int main(void) {
    int x;
    return _Alignof((void)x);
}